--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "react-dom": "^18.0.0",
     "react-scripts": "4.0.3",
     "stream": "^0.0.2",
-    "web-vitals": "^2.1.4",
-    "web3": "^1.7.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
